--- a/package.json
+++ b/package.json
@@ -1,28 +1,41 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "my-website",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "My Portfolio Website",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Corey Burns <coreymburns@gmail.com>",
   "dependencies": {
+    "@rebass/preset": "^4.0.5",
+    "@tippyjs/react": "^4.0.1",
+    "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.20.12",
     "gatsby-image": "^2.3.1",
     "gatsby-plugin-manifest": "^2.3.3",
     "gatsby-plugin-offline": "^3.1.2",
     "gatsby-plugin-react-helmet": "^3.2.2",
     "gatsby-plugin-sharp": "^2.5.3",
+    "gatsby-plugin-styled-components": "^3.2.3",
     "gatsby-source-filesystem": "^2.2.2",
     "gatsby-transformer-sharp": "^2.4.3",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.0.0"
+    "react-headroom": "^3.0.0",
+    "react-helmet": "^6.0.0",
+    "react-reveal": "^1.2.2",
+    "react-scroll-section": "^1.3.0",
+    "react-text-loop": "^2.3.0",
+    "rebass": "^4.0.7"
   },
   "devDependencies": {
     "prettier": "2.0.4"
   },
   "keywords": [
-    "gatsby"
+    "gatsby",
+    "portfolio",
+    "development",
+    "software",
+    "frontend"
   ],
   "license": "MIT",
   "scripts": {
