--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@rebass/preset": "^4.0.5",
     "@tippyjs/react": "^4.0.1",
     "babel-plugin-styled-components": "^1.10.7",
+    "emotion-theming": "^10.0.27",
     "gatsby": "^2.20.12",
     "gatsby-image": "^2.3.1",
     "gatsby-plugin-manifest": "^2.3.3",
@@ -25,7 +26,8 @@
     "react-reveal": "^1.2.2",
     "react-scroll-section": "^1.3.0",
     "react-text-loop": "^2.3.0",
-    "rebass": "^4.0.7"
+    "rebass": "^4.0.7",
+    "styled-components": "^5.1.0"
   },
   "devDependencies": {
     "prettier": "2.0.4"
@@ -49,9 +51,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/burnsco/my-website"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/burnsco/my-website/issues"
   }
 }
